Fix build for JDK 9